# triangular-arbitrage-bot

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
helper/: build.sh  lint.sh
src/: BinanceClient.cpp  BinanceClient.h  main.cpp
